Got slideshow working

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <head>
     <title>Jon and Valari</title>
-    <script type="text/javascript" src="/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="/jssor.slider.mini.js"></script>
+    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $('#intro a').on('click', function(){
@@ -61,299 +60,10 @@
             $("#leave_message").click(function(){
                 $("#guest_message").val("").toggle()
             });
-            $("#more").click(function () {
-                $("#content").animate({
-                    "margin-top": - (50 + $("#wrapper").position().top + $("#wrapper").height())
-                }, function () {
-                    $('#slideshow').show().animate({
-                        opacity: 1
-                    }, function () {
-                        var slider = new $JssorSlider$('slider1_container', {
-                            $AutoPlay: true
-                        });
-                    });
-                });
-            });
         });
     </script>
-    <style type="text/css">
-        /* http://meyerweb.com/eric/tools/css/reset/
-           v2.0 | 20110126
-           License: none (public domain)
-        */
-
-        html, body, div, span, applet, object, iframe,
-        h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-        a, abbr, acronym, address, big, cite, code,
-        del, dfn, em, img, ins, kbd, q, s, samp,
-        small, strike, strong, sub, sup, tt, var,
-        b, u, i, center,
-        dl, dt, dd, ol, ul, li,
-        fieldset, form, label, legend,
-        table, caption, tbody, tfoot, thead, tr, th, td,
-        article, aside, canvas, details, embed,
-        figure, figcaption, footer, header, hgroup,
-        menu, nav, output, ruby, section, summary,
-        time, mark, audio, video {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            font-size: 100%;
-            font: inherit;
-            vertical-align: baseline;
-            font-family: georgia;
-            color: black; /*#B25A00;*/
-            text-shadow: 1px 1px #ccc; /*#923A00;*/
-        }
-        /* HTML5 display-role reset for older browsers */
-        article, aside, details, figcaption, figure,
-        footer, header, hgroup, menu, nav, section {
-            display: block;
-        }
-        body {
-            line-height: 1;
-            background: white; /*#0089B2;*/
-            zoom: 1.6;
-        }
-        ol, ul {
-            list-style: none;
-        }
-        blockquote, q {
-            quotes: none;
-        }
-        blockquote:before, blockquote:after,
-        q:before, q:after {
-            content: '';
-            content: none;
-        }
-        table {
-            border-collapse: collapse;
-            border-spacing: 0;
-        }
-
-        /*************** Actual stuff **************/
-        #content {
-            padding: 20px;
-            margin: 0 -8px 0 0;
-            position: relative;
-            top: -2px;
-            left: -4px;
-            background: #ddd; /*#FFC284;*/
-            box-shadow: 0 0 1px 1px black; /*#0089B2;*/
-            border-radius: 25px;
-        }
-        #shadow {
-            margin: 100px auto;
-            width: 300px;
-            position: relative;
-            background: #aaa; /*#0089B2;*/
-            box-shadow: 0 0 2px 2px #aaa; /*#0089B2;*/
-            border-radius: 20px;
-        }
-
-        h2 {
-            margin: 0 auto 15px;
-            text-align: center;
-        }
-
-        h3 {
-            margin: 10px 0;
-        }
-
-        h4 {
-            margin: 10px 0;
-        }
-
-        p {
-            margin: 10px;
-            font-size: 12px;
-            text-align: center;
-        }
-
-        a {
-            text-decoration: none;
-            text-shadow: 1px 1px #ccc; /*#FF8000;*/
-        }
-        a:hover {
-            text-shadow: 1px 1px white;
-            cursor: pointer;
-        }
-
-        ul li {
-            margin-left: 20px;
-            list-style-type: disc;
-        }
-
-        ol > li {
-            border: 1px solid black; /*#B25A00;*/
-            border-radius: 8px;
-            background: white; /*#3CD1FF;*/
-            margin: 20px 0 0;
-            padding: 10px;
-            position: relative;
-            z-index: 2;
-        }
-
-        ol > li.list-shadow {
-            width: 240px;
-            margin-left: 4px;
-            z-index: 1;
-            border: 0px;
-            background: black;
-            box-shadow: 0 0 2px 2px black;
-            margin-top: -19px;
-        }
-
-        #error {
-            border: 1px solid #FF372B;
-            background: white; /*#FF372B;*/
-            color: black;
-            border-radius: 8px;
-            padding: 10px;
-            display: none;
-            text-align: center;
-        }
-
-        a.button {
-            border-radius: 8px;
-            margin: 10px auto;
-            display: block;
-            background: #aaa; /*#0089B2;*/
-            box-shadow: 0 0 1px 1px #aaa; /*#0089B2;*/
-            cursor: pointer;
-        }
-        a.button .body {
-            text-align: center;
-            padding: 10px;
-            margin: 0 -6px 0 0;
-            position: relative;
-            top: -2px;
-            left: -3px;
-            background: white; /*#3CD1FF;*/
-            border-radius: 8px;
-        }
-        a.button:hover {
-            /*background: #0089B2;*/
-        }
-        a.button:active {
-            box-shadow: none;
-            top: 0;
-        }
-        a.button .body:hover {
-            background: #eee; /*#45DAFF;*/
-        }
-        a.button .body:active {
-            top: 0;
-        }
-
-        .inactive {
-            opacity: .5;
-            cursor: progress;
-        }
-
-        iframe {
-            border: 0px;
-            overflow: hidden;
-        }
-
-        #intro {
-
-        }
-
-        #form {
-            display: none;
-        }
-
-        #form input, #form label {
-            display: inline-block;
-            width: 125px;
-            border-radius: 3px;
-        }
-        #form label {
-            position: relative;
-            padding: 5px 4px;
-            margin: 5px 8px 5px 0px;
-            background: white; /*#3CD1FF;*/
-        }
-        #form label:hover {
-            background: #eee; /*#FF9010;*/
-        }
-        #form .label-shadow {
-            width: 129px;
-            display: inline-block;
-            background: #aaa; /*#0089B2;*/
-            height: 25px;
-            position: relative;
-            margin: 0 20px -25px 2px;
-            top: 8px;
-            border-radius: 3px;
-            box-shadow: 0 0 1px 1px #aaa; /*#0089B2;*/
-        }
-        #form .full-width {
-            width:  261px;
-        }
-        #form .label-shadow.full-width {
-            width:  265px;
-        }
-        #form textarea.full-width {
-            width:  270px;
-        }
-        #leave_message {
-            cursor: pointer;
-        }
-        #leave_message:active {
-            top: 3px;
-        }
-        #guest_message {
-            display: none;
-        }
-        #form input, #form select {
-            margin-right: -20px;
-            height: 27px;
-            position: relative;
-            padding: 4px;
-            font-size: 16px;
-            border: 0px;
-        }
-        #form input:focus, #form select:focus {
-            box-shadow: 0 0 3px 3px #ccc inset;
-        }
-        #form input[type='checkbox']:focus {
-            box-shadow: none;
-        }
-
-        #form input[type='checkbox'] {
-            margin: -3px -20px 0 0;
-            width: 27px;
-            top: 8px;
-            height: 27px;
-        }
-
-        #epilogue {
-            display: none;
-        }
-
-        iframe {
-            zoom: 1;
-        }
-
-        #more {
-            text-align: center;
-            margin: 20px;
-        }
-
-        #slideshow {
-            background: black;
-            display: none;
-            opacity: 0;
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            cursor: move;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/css/base.css">
 </head>
 <body>
     <div id="wrapper">
@@ -427,21 +137,10 @@
                         <li class="list-shadow"></li>
                     </ol>
                     <div id="more">
-                        <a href="#">
-                            More
-                            <br>
-                            &dtrif;
+                        <a href="/slideshow/">
+                            More &rtrif;
                         </a>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div id="slideshow" u="slides">
-            <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 600px; height: 300px;">
-                <!-- Slides Container -->
-                <div u="slides" style="cursor: move; position: absolute; overflow: hidden; left: 0px; top: 0px; width: 600px; height: 300px;">
-                    <div><img u="image" src="/Screenshot from 2015-02-09 08:56:01.png" /></div>
-                    <div><img u="image" src="/Screenshot from 2015-02-19 23:48:13.png" /></div>
                 </div>
             </div>
         </div>
