Finishing up slideshow

--- a/index.html
+++ b/index.html
@@ -64,6 +64,123 @@
     </script>
     <link rel="stylesheet" type="text/css" href="/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/css/base.css">
+    <style type="text/css">
+    body {
+        zoom: 1.6;
+    }
+
+    p {
+        margin: 10px;
+        font-size: 12px;
+        text-align: center;
+    }
+
+    #intro {
+
+    }
+
+    #form {
+        display: none;
+    }
+
+    #form input, #form label {
+        display: inline-block;
+        width: 125px;
+        border-radius: 3px;
+    }
+    #form label {
+        position: relative;
+        padding: 5px 4px;
+        margin: 5px 8px 5px 0px;
+        background: white; /*#3CD1FF;*/
+    }
+    #form label:hover {
+        background: #eee; /*#FF9010;*/
+    }
+    #form .label-shadow {
+        width: 129px;
+        display: inline-block;
+        background: #aaa; /*#0089B2;*/
+        height: 25px;
+        position: relative;
+        margin: 0 20px -25px 2px;
+        top: 8px;
+        border-radius: 3px;
+        box-shadow: 0 0 1px 1px #aaa; /*#0089B2;*/
+    }
+    #form .full-width {
+        width:  261px;
+    }
+    #form .label-shadow.full-width {
+        width:  265px;
+    }
+    #form textarea.full-width {
+        width:  270px;
+    }
+    #leave_message {
+        cursor: pointer;
+    }
+    #leave_message:active {
+        top: 3px;
+    }
+    #guest_message {
+        display: none;
+    }
+    #form input, #form select {
+        margin-right: -20px;
+        height: 27px;
+        position: relative;
+        padding: 4px;
+        font-size: 16px;
+        border: 0px;
+    }
+    #form input:focus, #form select:focus {
+        box-shadow: 0 0 3px 3px #ccc inset;
+    }
+    #form input[type='checkbox']:focus {
+        box-shadow: none;
+    }
+
+    #form input[type='checkbox'] {
+        margin: -3px -20px 0 0;
+        width: 27px;
+        top: 8px;
+        height: 27px;
+    }
+
+    #epilogue {
+        display: none;
+    }
+
+    iframe {
+        zoom: 1;
+    }
+
+    #more {
+        text-align: center;
+        margin: 20px;
+    }
+
+    #content {
+        padding: 20px;
+        margin: 0 -8px 0 0;
+        position: relative;
+        top: -2px;
+        left: -4px;
+        background: #ddd; /*#FFC284;*/
+        box-shadow: 0 0 1px 1px black; /*#0089B2;*/
+        border-radius: 25px;
+    }
+
+    #shadow {
+        margin: 100px auto;
+        width: 300px;
+        position: relative;
+        background: #aaa; /*#0089B2;*/
+        box-shadow: 0 0 2px 2px #aaa; /*#0089B2;*/
+        border-radius: 20px;
+    }
+    </style>
 </head>
 <body>
     <div id="wrapper">
