--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                     .attr('disabled', true)
                     .find('span').text('Thanks!')
                     .off();
+
+                // Gotta add this only when the element is visible.
+                $('#map').html('<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d175518.93794382026!2d-117.18853379957393!3d46.57768026587551!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54a02cdf14c5c589%3A0x96f103b312296840!2s501+Wawawai+Rd%2C+Colton%2C+WA+99113!5e0!3m2!1sen!2sus!4v1427808623778" width="245" height="200" frameborder="0" style="border:0;"></iframe>');
             };
             $("#skip").on("click", showDetails);
             $('#submit').on('click', function(){
@@ -244,6 +247,12 @@
                     <ol>
                         <li>
                             <h4>Ceremony location:</h4>
+                            <small>
+                                <a href="http://www.red-barn-farms.com/index.html" target="_blank">
+                                    Red Barn Farms
+                                </a>
+                            </small>
+                            <div id="map" style="zoom: 1"></div>
                         </li>
                         <li class="list-shadow"></li>
                         <li>
