--- a/slideshow.html
+++ b/slideshow.html
@@ -4,10 +4,11 @@
     <link rel="stylesheet" type="text/css" href="/css/base.css">
     <style type="text/css">
         body {
-            /*background: black;*/
+            background: black;
             height: 98%;
             position: relative;
             overflow-x: hidden;
+
         }
 
         .slideshow-container {
