Styling slideshow text

--- a/slideshow.html
+++ b/slideshow.html
@@ -8,7 +8,8 @@
             height: 98%;
             position: relative;
             overflow-x: hidden;
-
+            color: white;
+            text-shadow: 1px 1px #666;
         }
 
         .slideshow-container {
