--- a/slideshow.html
+++ b/slideshow.html
@@ -15,6 +15,7 @@
         .slideshow-container {
             width: 50%;
             margin: 20px;
+            height: 90%;
         }
 
         .slideshow {
@@ -30,9 +31,8 @@
         }
 
         .story {
-            margin: 40px 20px;
+            margin: 20px 20px;
             padding: 0 20px;
-            height: 88%;
             width: 32%;
             overflow: auto;
         }
@@ -56,61 +56,76 @@
 <body>
     <div class="slideshow-container">
         <div class="vertical-center slideshow">
-            <img src="/fb_engagement1.jpg">
-            <img src="/fb_engagement2.jpg">
+            <img src="/img/DSC_8075-3.jpg">
+            <img src="/img/DSC_8076-2.jpg">
+            <img src="/img/DSC_8083.jpg">
+            <img src="/img/DSC_8089.jpg">
+            <img src="/img/DSC_8094.jpg">
+            <img src="/img/DSC_8113.jpg">
+            <img src="/img/DSC_8128-2.jpg">
+            <img src="/img/DSC_8130-2.jpg">
+            <img src="/img/DSC_8137.jpg">
+            <img src="/img/DSC_8150-2.jpg">
+            <img src="/img/DSC_8181.jpg">
+            <img src="/img/DSC_8190-2.jpg">
+            <img src="/img/DSC_8202.jpg">
+            <img src="/img/DSC_8234.jpg">
+            <img src="/img/DSC_8242.jpg">
+            <img src="/img/DSC_8245.jpg">
+            <img src="/img/DSC_8250.jpg">
+            <img src="/img/DSC_8272.jpg">
+            <img src="/img/DSC_8275.jpg">
+            <img src="/img/DSC_8292.jpg">
+            <img src="/img/DSC_8379.jpg">
+            <img src="/img/DSC_8408.jpg">
+            <img src="/img/DSC_8416-2.jpg">
+            <img src="/img/DSC_8422-2.jpg">
+            <img src="/img/DSC_8504.jpg">
+            <img src="/img/DSC_8530.jpg">
+            <img src="/img/DSC_8553.jpg">
+            <img src="/img/DSC_8605.jpg">
+            <img src="/img/DSC_8635.jpg">
+            <img src="/img/DSC_8663-2.jpg">
+            <img src="/img/DSC_8797-2.jpg">
+            <img src="/img/DSC_8835.jpg">
+            <img src="/img/DSC_8853.jpg">
+            <img src="/img/DSC_8862-2.jpg">
+            <img src="/img/DSC_8874.jpg">
+            <img src="/img/DSC_8886.jpg">
+            <img src="/img/DSC_8927.jpg">
+            <img src="/img/DSC_8937.jpg">
+            <img src="/img/DSC_8947.jpg">
+            <img src="/img/DSC_8997-2.jpg">
+            <img src="/img/DSC_9026.jpg">
+            <img src="/img/DSC_9030.jpg">
+            <img src="/img/DSC_9084.jpg">
+            <img src="/img/DSC_9100.jpg">
+            <img src="/img/DSC_9106-4.jpg">
+            <img src="/img/DSC_9109.jpg">
+            <img src="/img/DSC_9137.jpg">
+            <img src="/img/DSC_9142.jpg">
+            <img src="/img/DSC_9146-2.jpg">
+            <img src="/img/DSC_9146.jpg">
+            <img src="/img/DSC_9238-2.jpg">
+            <img src="/img/DSC_9349.jpg">
         </div>
     </div>
-    <div class="story">
-        <h1>Part 1</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h1>Part 2</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+    <div class="story vertical-center">
+        <div>
+            <h1>We’re getting MARRIED!</h1>
+            <p>
+                It’s tough for us to over-emphasize just how excited we are about this.
+                God has been so good to us —  through a crazy chain of events,
+                He brought us together at just the right place, in just the right time.
+            <p>
+            <p>
+                Throughout our story, God has reminded us repeatedly that He is a
+                loving Father, a faithful Friend, a re-creator, a maker of beautiful
+                things. We’re so excited and pleased to invite you to witness a new
+                creation, and to participate in our union.
+            </p>
+            <a href="/" class="basic-link">rsvp &rtrif;</a>
+        </div>
     </div>
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script>
@@ -123,7 +138,7 @@
                 i++;
 
                 // Loop back through
-                if (i === $slideshow.length + 1) {
+                if (i === $slideshow.find('img').length + 1) {
                     i = 0;
                 }
 
