--- a/slideshow.html
+++ b/slideshow.html
@@ -39,8 +39,18 @@
 
         .story, .slideshow-container {
             float: left;
+            z-index: 10000;
         }
 
+        .nav ul, .nav li {
+            list-style: none;
+            margin-left: 0px;
+            font-size: 24px;
+        }
+
+        .nav li {
+            margin-bottom: 10px;
+        }
 
         @media screen and (max-width: 700px) {
             .slideshow-container, .story {
@@ -124,7 +134,28 @@
                 things. We’re so excited and pleased to invite you to witness a new
                 creation, and to participate in our union.
             </p>
-            <a href="/" class="basic-link">rsvp &rtrif;</a>
+            Please Join us at Red Barn Farms for our Ceremony and Reception.
+            <br />
+            <br />
+            <div>
+                Sunday June 14th at 3 PM
+                <br />
+                Red Barn Farms (21 miles from Moscow, ID)
+                <br />
+                501 Wawawai RD
+                <br />
+                Colton, WA 99113
+                <br />
+                <a class="basic-link" href="http://www.red-barn-farms.com">www.red-barn-farms.com</a>
+            </div>
+            <br />
+            <br />
+            <br />
+            <ul class="basic-link nav">
+                <li><a href="/rsvp/">RSVP &rtrif;</a></li>
+                <li><a href="/rsvp/#accomodation">Airport and Accomodations &rtrif;</a></li>
+                <li><a href="/rsvp/#registry">Registry &rtrif;</a></li>
+            </ul>
         </div>
     </div>
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
