Adding call to position

--- a/slideshow.html
+++ b/slideshow.html
@@ -184,6 +184,7 @@
                 $next.css({opacity: 0}).animate({opacity: 1}, 1500);
 
                 setTimeout(slide, 5000);
+                positionAll();
             };
 
 
